<?xml version="1.0"?>
<package format="2">
  <name>offboard</name>
  <version>0.0.0</version>
  <description>The IVSR offboard package</description>

  <maintainer email="congtranv@outlook.com">congtranv</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!--giang-->
  <build_depend>dynamic_reconfigure</build_depend>
  <!-- <buildtool_depend>catkin</buildtool_depend> -->
  <!-- <build_depend>roscpp</build_depend> -->
  <!-- <build_depend>rospy</build_depend> -->
  <!-- <build_depend>std_msgs</build_depend> -->
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <!-- <build_depend>geometry_msgs</build_depend> -->
  <build_depend>controller_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_extras</build_depend>
  <!-- <build_depend>mavros_msgs</build_depend> -->
  <build_depend>mavros_extras</build_depend>
  <build_depend> eigen_catkin</build_depend>
  <build_depend> message_filters</build_depend>
  <!-- <build_depend>message_generation</build_depend> -->

  <!-- <exec_depend>message_runtime</exec_depend> -->
  <exec_depend>dynamic_reconfigure</exec_depend>
  <!-- <exec_depend>roscpp</exec_depend> -->
  <!-- <exec_depend>rospy</exec_depend> -->
  <!-- <exec_depend>std_msgs</exec_depend> -->
  <exec_depend>sensor_msgs</exec_depend>
  <!-- <exec_depend>geometry_msgs</exec_depend> -->
  <exec_depend>controller_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_extras</exec_depend>
  <!-- <exec_depend>mavros_msgs</exec_depend> -->
  <exec_depend>message_filters</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
